Utilisation de Bootstrap pour la mise en page du site

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,8 @@
             {% include 'layout/_header.html.twig' %}
         {% endblock %}
 
-        {% block body %}{% endblock %}
+        <main class="container">
+            {% block body %}{% endblock %}
+        </main>
     </body>
 </html>
