--- a/templates/layout/_header.html.twig
+++ b/templates/layout/_header.html.twig
@@ -1,12 +1,24 @@
 <header>
-    <nav>
-        <ul>
-            <li>
-                <a href="{{ path('homepage') }}">Accueil</a>
-            </li>
-            <li>
-                <a href="{{ path('contact') }}">Contact</a>
-            </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="{{ path('homepage') }}">Easinvoice</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link {{ app.request.get('_route') == 'homepage' ? 'active' : '' }}" href="{{ path('homepage') }}">
+                            Accueil
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {{ app.request.get('_route') == 'contact' ? 'active' : '' }}" href="{{ path('contact') }}">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 </header>
