--- a/templates/layout/_header.html.twig
+++ b/templates/layout/_header.html.twig
@@ -13,6 +13,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {{ app.request.get('_route') == 'customer_index' ? 'active' : '' }}" href="{{ path('customer_index') }}">
+                            Clients
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {{ app.request.get('_route') == 'contact' ? 'active' : '' }}" href="{{ path('contact') }}">
                             Contact
                         </a>
