Création du formulaire pour ajouter un client

--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -5,6 +5,8 @@
 {% block body %}
     <h1>Liste des clients</h1>
 
+    <a href="{{ path('customer_create') }}" class="btn btn-primary">Ajouter</a>
+
     <ul>
         {% for customer in customers %}
             <li>
