--- a/templates/layout/_header.html.twig
+++ b/templates/layout/_header.html.twig
@@ -18,6 +18,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {{ app.request.get('_route') == 'app_category_index' ? 'active' : '' }}" href="{{ path('app_category_index') }}">
+                            Catégories
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {{ app.request.get('_route') == 'contact' ? 'active' : '' }}" href="{{ path('contact') }}">
                             Contact
                         </a>
