--- a/templates/customer/show.html.twig
+++ b/templates/customer/show.html.twig
@@ -5,5 +5,17 @@
 {% block body %}
     <h1>{{ customer.name }}</h1>
     <p>Date de création : {{ customer.createdAt|date('d/m/Y') }}</p>
+    <ul>
+        {% for project in customer.projects %}
+            <li>
+                {{ project.title }}
+                (
+                {% for category in project.categories %}
+                    {{ category.name }}
+                {% endfor %}
+                )
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
 
