Création de l'entité User et du formulaire de login

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,5 +5,5 @@
 {% block body %}
     <h1>Page d'accueil</h1>
 
-    <p>Bonjour {{ fullname }}</p>
+    <p>Bonjour {{ app.user ? app.user.email : 'Toto' }}</p>
 {% endblock %}
